# Copyright 2021 Cargill Incorporated
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ------------------------------------------------------------------------------

[package]
name = "cyl"
version = "0.3.0"
authors = ["Bitwise IO, Inc.", "Cargill Incorporated"]
edition = "2021"
license = "Apache-2.0"
readme = "../README.md"
description = """\
    Cyl is a high-level cryptographic signing CLI tool.
"""
repository = "https://github.com/cargill/cylinder"

include = [
    "src/**/*.rs",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cylinder = { path = "../libcylinder", features = ["jwt", "key-load"], version = "=0.3.0" } # cylinder Version
clap = { version = "4", features = ["derive"] }
dirs = "4"
log = "0.4"
flexi_logger = "0.24"

[features]
default = []

stable = [
    "default",
]

experimental = [
  # The experimental feature extends stable:
  "stable",
  # The following features are experimental:
]

[package.metadata.docs.rs]
features = [
  "stable",
  "experimental"
]
